Revert ":bug: Fix weird text align"
This reverts commit 726f55bd045f2ec3a82eaf1cba698b370ead760c.

--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -16,7 +16,7 @@
 
 .text-editor {
   .DraftEditor-root {
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
